<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="locate">Show location in map</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_location">Location</string>
    <string name="pref_location_description">The ISO city code used by the openweather API</string>
    <string name="pref_location_default" translatable="false">Kolkata,in</string>
    <string name="pref_location_key" translatable="false">location</string>

    <string name="pref_title_temp_metric">Pick your units</string>
    <string name="pref_default_temp_metric">metric</string>
    <string name="pref_temp_metric_key" translatable="false">unit</string>
    <string name="pref_temp_metric_unit" translatable="false">Celcius</string>
    <string name="pref_temp_imperial_unit" translatable="false">Fahrenheit</string>
    <string name="pref_temp_metric_unit_value" translatable="false">metric</string>
    <string name="pref_temp_imperial_unit_value" translatable="false">imperial</string>

    <string-array name="pref_temp_metric_options">
        <item>@string/pref_temp_metric_unit</item>
        <item>@string/pref_temp_imperial_unit</item>
    </string-array>
    <string-array name="pref_temp_metric_options_values">
        <item>@string/pref_temp_metric_unit_value</item>
        <item>@string/pref_temp_imperial_unit_value</item>
    </string-array>


</resources>
