<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        android:key="@string/pref_location_key"
        android:title="@string/pref_title_location"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="Metric"
        android:entries="@array/pref_temp_metric_options"
        android:entryValues="@array/pref_temp_metric_options_values"
        android:key="@string/pref_temp_metric_key"
        android:title="@string/pref_title_temp_metric" />
    -->
</PreferenceScreen>
